@@ -29,6 +29,7 @@
         <a class="iconbutton searchicon"></a>
         <roundcube:button command="reset-foldersearch" id="folderlistsearch-reset" class="iconbutton reset" title="resetsearch" width="13" height="13" />
     </div>
+    <roundcube:object name="folderfilter" id="folderlist-filter" />
 </div>
 <div id="folderlist-content" class="boxlistcontent">
     <roundcube:object name="foldersubscription" form="subscriptionform" id="subscription-table"
