@@ -1957,7 +1957,6 @@ ul.proplist li {
 }
 
 .listsearchbox {
-	position: relative;
 	padding: 4px;
 	background: #c7e3ef;
 	display: none;
