@@ -29,6 +29,7 @@
 		<a class="iconbutton searchicon"></a>
 		<roundcube:button command="reset-foldersearch" id="folderlistsearch-reset" class="iconbutton reset" title="resetsearch" label="resetsearch" />
 	</div>
+	<roundcube:object name="folderfilter" id="folderlist-filter" />
 </div>
 <div id="folderslist-content" class="scroller withfooter">
 	<roundcube:object name="foldersubscription" form="subscriptionform" id="subscription-table" class="treelist listing folderlist" />
