@@ -540,13 +540,14 @@ function rcube_mail_ui()
     $('.boxtitle a.search', container).click(function(e) {
       var title = $('.boxtitle', container),
         box = $('.listsearchbox', container),
-        dir = box.is(':visible') ? -1 : 1;
+        dir = box.is(':visible') ? -1 : 1,
+        height = 34 + ($('select', box).length ? 24 : 0);
 
       box.slideToggle({
         duration: 160,
         progress: function(animation, progress) {
           if (dir < 0) progress = 1 - progress;
-            $('.scroller', container).css('top', (title.outerHeight() + 34 * progress) + 'px');
+            $('.scroller', container).css('top', (title.outerHeight() + height * progress) + 'px');
         },
         complete: function() {
           box.toggleClass('expanded');
